glibc (2.3.6-16) UNRELEASED; urgency=low

  * Add arm/cvs-gcc4.1-raise.diff (fix build failure with gcc-4.1) from
    upstream.
  * Add ia64/cvs-gcc41-atomic_h.diff (fix build failure with gcc-4.1) from
    upstream.
  * Build with gcc 4.1 on all architectures but hurd-i386.

 -- Aurelien Jarno <aurel32@debian.org>  Thu,  8 Jun 2006 08:03:49 +0200

glibc (2.3.6-15) unstable; urgency=low

  * debian/rules.d/build.mk: generate a test log file even if the testsuite
    is disabled, too make debhelper 5 happy.

 -- Aurelien Jarno <aurel32@debian.org>  Thu,  8 Jun 2006 08:02:47 +0200

glibc (2.3.6-14) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/debhelper.in/nscd: explicitely list the tables to invalidate.
    (Closes: #370124)
  * debian/debhelper.in/nscd: create /var/run/nscd if it does not already
    exist.  (Closes: #370122)
  * Update m68k/local-mathinline_h.diff (fix bits/mathinline.h), by Roger Leigh.
    Enable it.  (Closes: #340871)
  * debian/debhelper.in/libc.preinst: also check for other copies of the libc in
    /lib32 and /lib64.
  * debian/debhelper.in/libc.preinst, debian/rules.d/debhelper.mk: only use
    the default system linker when searching for other copies of the libc.
  * debian/sysdeps/i386.mk: make /lib/i386-linux-gnu and /usr/lib/i386-linux-gnu
    symlinks relative.
  * debhelper.in/libnss-dns-udeb.install, debhelper.in/libnss-files-udeb.install:
    fix the installation path.  (Closes: #370523)
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1583 (from glibc-bsd)
    to fix the build with gcc-4.1.
  * patches/m32r/local-ports-m32r.diff: remove libc_cv_gcc_unwind_find=yes
    from m32r/configure by Kazuhiro Inaoka.  (Closes: #371052)
  * rules.d/debhelper.mk: don't install librpcsvc.a when cross-compiling.
    (Closes: #369657)
  * debian/compat, debian/control.in/main: switch to debhelper 5.0.

  [ Denis Barbier ]
  * debian/patches/localedata/tailor-iso14651_t1.diff: Fix several collation