@@ -98,7 +98,7 @@ mandir=$(prefix)/share/man
 sbindir=$(prefix)/sbin
 libexecdir=$(prefix)/lib
 
-BUILD_CC = gcc-4.0
+BUILD_CC = gcc-4.1
 
 RUN_TESTSUITE = yes
 
