@@ -4,9 +4,10 @@ GLIBC_PASSES += nptl
 # build 64-bit (s390x) alternative library
 GLIBC_PASSES += s390x
 DEB_ARCH_REGULAR_PACKAGES += libc6-s390x libc6-dev-s390x
+s390x_MIN_KERNEL_SUPPORTED = 2.6.0
 s390x_configure_target = s390x-linux
 s390x_CC = $(CC) -m64
-s390x_add-ons = linuxthreads $(add-ons)
+s390x_add-ons = nptl $(add-ons)
 libc6-s390x_shlib_dep = libc6-s390x (>= $(shlib_dep_ver))
 s390x_extra_cflags = -g1 -O3
 s390x_slibdir = /lib64
