@@ -5,6 +5,9 @@ glibc (2.3.6-16) UNRELEASED; urgency=low
   * Add ia64/cvs-gcc41-atomic_h.diff (fix build failure with gcc-4.1) from
     upstream.
   * Build with gcc 4.1 on all architectures but hurd-i386.
+  * debian/sysdeps/s390.mk: switch s390x to nptl.
+  * debian/rules.d/build.mk: use ld.so instead of libc.so to determine if the
+    host CPU is able to run the testsuite.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu,  8 Jun 2006 08:03:49 +0200
 
